# scikit-kinematics

./: .gitignore  .travis.yml  CHANGES.txt  LICENSE.txt  MANIFEST.in  README  README.md  README.rst  distribute_skinematics.bat  pyproject.toml  requirements.txt  runtests.py  setup.cfg  setup.py  xtest_view.py
docs/: FAQ.txt  Makefile  conf.py  imus.rst  index.rst  make.bat  markers.rst  misc.rst  quat.rst  rotmat.rst  vector.rst  view.rst  viewer.rst
skexample/: __init__.py  setup.py  stuff.py
skexample/tests/: test_stuff.py  test_version.py
skinematics/: __init__.py  import_data.py  imus.py  markers.py  misc.py  quat.py  rotmat.py  setup.py  vector.py  view.py  view_3d.py  viewer.py  xio.py
skinematics/sensors/: barnobi.py  manual.py  polulu.py  vicon.py  xio.py  xio3.py  xio_ngimu.py  xsens.py  yei.py
skinematics/simulations/: simulate_movements.py
skinematics/tests/: __init__.py  positive_rotations.py  test_imus.py  test_markers.py  test_misc.py  test_quat.py  test_rotmat.py  test_sensor_manual.py  test_sensor_polulu.py  test_sensor_xio.py  test_sensor_xio_ngimu.py  test_sensor_xsens.py  test_sensor_yei.py  test_skinematics.py  test_vector.py  test_view.py  test_viewer.py
skinematics/tests/data/: data_polulu.txt  data_xsens.txt  data_yei.txt  planet_trajectory_2D.txt  walking_xsens_upperLeg.txt
skinematics/tests/data/data_ngimu/: quaternion.csv  rssi.csv  temperature.csv
skinematics/tests/data/data_xio/: 00033_CalBattAndTherm.csv  00033_Commands.csv  00033_DateTime.csv  00033_Registers.csv
src/skinematics/: __init__.py  imus.py  setup.py
src/skinematics/sensors/: polulu.py  vicon.py  xio.py  xio_ngimu.py  xsens.py
tests/: __init__.py  test_imus.py  test_markers.py  test_misc.py  test_quat.py  test_rotmat.py  test_sensor_manual.py  test_sensor_polulu.py  test_sensor_vicon.py  test_sensor_xio.py  test_sensor_xio3.py  test_sensor_xio_ngimu.py  test_sensor_xsens.py  test_sensor_yei.py  test_skinematics.py  test_vector.py  test_viewer.py
tests/data/: LeftFoot-marche01.c3d  walking_xsens_lowerLeg.txt
tests/data/data_ngimu/: Device.xml  Settings.txt  battery.csv  humidity.csv  sensors.csv
tests/data/data_xio/: 00033_CalInertialAndMag.csv  00033_EulerAngles.csv  00033_Quaternion.csv  00033_RotationMatrix.csv
tests/data/data_xio3/: Battery.csv  Command.json  HighGAccelerometer.csv  Inertial.csv  Magnetometer.csv  Quaternion.csv  Temperature.csv
