[tool.poetry]
name = "scikit-kinematics"
version = "0.9.1"
description  = "Python utilites for movements in 3d space"
authors = ["Thomas Haslwanter <thomas.haslwanter@fh-ooe.at>"]
readme = "README.md"
license = "BSD-3-Clause"
homepage = "https://work.thaslwanter.at/skinematics/html"
repository = "https://github.com/thomas-haslwanter/scikit-kinematics"
keywords = ["quaterions", "rotations"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Topic :: Scientific/Engineering",
]
packages = [
    {include = "skinematics" },
    {include = "tests" },
]
# include = [
#     { path = "tests/data" },
# ]

[tool.poetry.dependencies]
python = ">=3.7"
docutils = ">= 0.3"
matplotlib = ">= 3.1"
numpy = ">= 1.13.0"
pandas = ">= 1.0"
sympy = ">= 1.0"
scipy = ">= 1.5"
pygame = ">= 2.0"

# PyOpenGL>3.0.0]


[tool.poetry.group.dev.dependencies]
pytest = "^5.2"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "postry.core.masonry.api"
