[metadata]
name = scikit-kinematics
version = 0.8.8
author       = Thomas Haslwanter
author_email = thomas.haslwanter@fh-ooe.at
description  = Python utilites for movements in 3d space
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thomas-haslwanter/scikit-kinematics
project_urls =
    Documentation = https://work.thaslwanter.at/skinematics/html
license      = http://opensource.org/licenses/BSD-2-Clause
keywords     = quaterions, rotations
classifiers  = 
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Topic :: Scientific/Engineering


[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.5

# Project uses reStructuredText, so ensure that the docutils get
# installed or upgraded on the target machine
install_requires = 
    docutils >= 0.3
    matplotlib >= 2.0
    numpy >= 1.13.0
    pandas >= 0.18
    sympy >= 1.0
    scipy >= 0.18
    pygame
                 # PyOpenGL>3.0.0]

test_suite   = nose.collector
tests_require = [nose]

[options.package_data]
package_data = {tests: [*.txt, *.csv, *.BIN]}

[options.packages.find]
where = src
